--- a/original/config - Copy (2).yaml
+++ b/original/config - Copy (2).yaml
@@ -1,5 +1,5 @@
 API:
-  LARGE_MODEL: wizard-vicuna-uncensored:30b
+  LARGE_MODEL: hf.co/bartowski/Llama-3.3-70B-Instruct-GGUF:Q4_K_M
   LARGE_API_KEY: key-here
   LARGE_BASE_URL: http://localhost:11434/v1
   LARGE_MODE: api
@@ -20,10 +20,10 @@ PHASE:
   PHASE_INDEX: 3
   WORK_IN_PHASES: False
 SKIP:
-  ANSWER_RELEVANCY_CHECK: True
+  ANSWER_RELEVANCY_CHECK: False
   REPAIR_QA_TUPLES: False
   FILTER_CHUNKS: False
-  QUESTION_CHECK: True
+  QUESTION_CHECK: False
   CONVERSATION_GENERATION: False
 SYSTEM:
   CHUNK_SIZE: 1900
@@ -55,7 +55,7 @@ SYSTEM:
   STOP: True
   SUBSET_SIZE: 20
   USE_FILENAMES: False
-  USE_SUBSET: FALSE
+  USE_SUBSET: True
   RAG_FAILURE_PERCENTAGE: 0.1 # How much of the RAG data has the wrong chunk retrieved deliberately? To train it to answer correctly even if wrong facts are shown to it. We will need another dataset thing for making data where the question asks something that is not present and the rag retrieves something irrelevant obbviously and it is supposed to say "I don't know" or something.
 SCRAPING:
   USE_GUTENBERG: False
